[gd_scene format=3 uid="uid://2onobu8eymt8"]

[ext_resource type="PackedScene" uid="uid://ctfgfelg0sho8" path="res://src/Tools/BaseTool.tscn" id="1"]
[ext_resource type="Script" uid="uid://bt6mnsibfgh81" path="res://src/Tools/UtilityTools/ColorPicker.gd" id="2"]

[node name="ToolOptions" unique_id=1027862236 instance=ExtResource("1")]
script = ExtResource("2")

[node name="ColorPicker" type="VBoxContainer" parent="." index="2" unique_id=991427137]
layout_mode = 2

[node name="Label" type="Label" parent="ColorPicker" index="0" unique_id=696880749]
layout_mode = 2
size_flags_vertical = 1
mouse_default_cursor_shape = 2
text = "Pick for:"

[node name="Options" type="OptionButton" parent="ColorPicker" index="1" unique_id=1682099273]
layout_mode = 2
mouse_default_cursor_shape = 2
selected = 0
item_count = 2
popup/item_0/text = "Left Color"
popup/item_0/id = 0
popup/item_1/text = "Right Color"
popup/item_1/id = 1

[node name="Label2" type="Label" parent="ColorPicker" index="2" unique_id=469053954]
layout_mode = 2
size_flags_vertical = 1
mouse_default_cursor_shape = 2
text = "Pick mode:"

[node name="ExtractFrom" type="OptionButton" parent="ColorPicker" index="3" unique_id=2077666528]
layout_mode = 2
mouse_default_cursor_shape = 2
selected = 0
item_count = 2
popup/item_0/text = "Top Color"
popup/item_0/id = 0
popup/item_1/text = "Current Layer"
popup/item_1/id = 1

[connection signal="item_selected" from="ColorPicker/Options" to="." method="_on_Options_item_selected"]
[connection signal="item_selected" from="ColorPicker/ExtractFrom" to="." method="_on_ExtractFrom_item_selected"]
